--- a/WeatherApp/appsettings.json
+++ b/WeatherApp/appsettings.json
@@ -9,7 +9,7 @@
     "ApiKey": "b4a8a33b87048bb89f733da7ee6448a3"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=weatherdb;User=root;Password=39ps46rt59;"
+    "DefaultConnection": "Server=localhost;Database=weatherdb;User=root;Password=root;"
   },
   "AllowedHosts": "*"
 }
